[package]
name = "testbench"
#
# Release checklist:
#
# - Check all TODOs, FIXMEs, unwraps, and expects: can I do better now?
# - Cross-check all public API documentation, update as needed.
# - Update changelog.
# - Update version number in Cargo.toml
# - Roll an annotated git tag
# - Push it, make sure both the tag and master pass CI.
# - Cargo publish.
# - Add a github release
#
version = "0.7.3"
authors = ["Hadrien G. <knights_of_ni@gmx.com>"]
description = "Testing and benchmarking tools for concurrent Rust code"
documentation = "https://docs.rs/testbench/"
repository = "https://github.com/HadrienG2/testbench"
readme = "README.md"
keywords = [ "testing", "benchmarking", "multithreading", "concurrent" ]
categories = [ "concurrency", "development-tools" ]
license = "MPL-2.0"
edition = "2018"

[badges]
maintenance = { status = "passively-maintained" }
