[package]
name = "testbench"
#
# Release checklist:
#
# - Check all TODOs, FIXMEs, unwraps, and expects: can I do better now?
# - Cross-check all public API documentation, update as needed.
# - Update changelog.
# - Update version number in Cargo.toml
# - Make a branch and push it, create a PR with auto-merge on CI success
# - Cargo publish
# - Roll an annotated git tag mimicking changelog
# - Create a matching github release
#
version = "1.0.1"
authors = ["Hadrien G. <knights_of_ni@gmx.com>"]
edition = "2021"
rust-version = "1.63.0"
description = "Testing and benchmarking tools for concurrent Rust code"
documentation = "https://docs.rs/testbench/"
repository = "https://github.com/HadrienG2/testbench"
license = "MPL-2.0"
keywords = [ "testing", "benchmarking", "multithreading", "concurrent" ]
categories = [ "concurrency", "development-tools" ]

[badges]
maintenance = { status = "passively-maintained" }
